src/components/MovieInfo/style.scss
.main {
    display: flex;
    align-items: center;
    position: relative;
    width: 100%;
}

.backdrop {
    position: absolute;
    top: 0;
    left: calc(((100vw - 100%) / 2) * -1);
    z-index: -1;
    width: 100vw;
    height: 100%;
    overflow: hidden;

    @media (max-width: $mobile) {
        left: calc(((150vw - 100%) / 2) * -1);
        width: 150vw;
    }
}

.backdropPoster {
    position: absolute;
    z-index: -1;
    width: 100%;
}

.overlay {
    width: 100%;
    height: 100%;
    background: linear-gradient(to bottom, $overlayS, $mainBack);
}

.overview {
    display: flex;
    align-items: center;
    padding: 32px 0;
    width: 100%;

    @media (max-width: $mobile) {
        margin: 0 4px;
        flex-direction: column;
    }
}

.infoBlock {
    margin-left: 32px;
    display: flex;
    flex-direction: column;
    width: 100%;

    @media (max-width: $mobile) {
        order: -1;
        margin-left: 0;
    }
}

.upperInfo {
    display: flex;
    margin-bottom: 48px;

    @media (max-width: $mobile) {
        flex-direction: column;
    }
}

.info {
    display: flex;
    flex-direction: column;
    max-width: 60%;

    @media (max-width: $mobile) {
        max-width: 100%;
    }
}

.preview {
    min-width: 256px;

    @media (max-width: $mobile) {
        margin-top: 64px;
        max-width: 256px;
    }
}

.title {
    font-size: 36px;
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;  
    overflow: hidden;
    line-height: 1.1;
    max-height: 3.3em;
}

.trailerLink {
    margin-top: 32px;
    display: flex;
    transition: color .2s;
    color: $mainColor;

    &:visited {
        color: $mainColor;
    }
    &:hover {
        color: $mainColorS;
    }
}

.playIcon {
    margin-right: 16px;
}

.additionalInfo {
    margin-top: 8px;

    & > * + * {
        position: relative;
        margin-left: 20px;
        &::before {
            content: "\A";
            width: 4px;
            height: 4px;
            position: absolute;
            border-radius: 50%;
            left: -12px;
            top: 50%;
            background: $mainColor;
            display: inline-block;
        }
    }
}

.rate {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 50px;
    font-weight: bold;
    width: 132px;
    height: 132px;
    border-radius: 50%;
    border: 8px solid rgba($mainAccent, 0.9);
    margin: 0 auto;
}

.tagline {
    color: $mainColorS;
}

.plot {
    margin-bottom: 32px;
    display: -webkit-box;
    -webkit-line-clamp: 5;
    -webkit-box-orient: vertical;  
    overflow: hidden;
    line-height: 1.2;
    max-height: 6em;
}

.creators {
    display: flex;
    overflow: scroll;

    & > * {
        display: flex;
        flex-direction: column;

        & > :first-child {
            font-weight: bold;
        }
        & > :last-child {
            color: $mainColorS;
        }
    }

    & > * + * {
        margin-left: 128px;

        @media (max-width: $mobile) {
            margin-left: 32px;
        }
    }
}

